<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white66"
            android:textSize="13sp" />

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/tv_check_all"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/common_check_all"
            android:textColor="@color/white66"
            android:textSize="12sp"
            android:visibility="gone"/>

        <ImageView
            android:id="@+id/iv_right_arrow"
            android:layout_width="7dp"
            android:layout_height="13dp"
            android:layout_marginStart="5dp"
            android:src="@drawable/ic_right_arrow"
            android:visibility="gone"/>

    </LinearLayout>

    <!-- 规格参数-->
    <LinearLayout
        android:id="@+id/ll_params_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/shape_pink_5"
        android:paddingStart="10dp"
        android:paddingTop="12dp"
        android:paddingEnd="10dp"
        android:paddingBottom="12dp"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/params_color"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/params_size"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/params_repertory_below"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/params_whole_price"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/params_repertory"
            android:textColor="@color/white"
            android:textSize="12sp" />

    </LinearLayout>

    <!-- 规格参数列表-->
    <com.rainwood.tools.widget.MeasureListView
        android:id="@+id/lv_size_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@color/transparent"
        android:dividerHeight="0dp"
        android:scrollbars="none" />

    <!-- 常规格式-->
    <com.rainwood.tools.widget.MeasureListView
        android:id="@+id/lv_comm_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:divider="@color/transparent"
        android:dividerHeight="20dp" />

    <!-- 图片列表-->
    <com.rainwood.tools.widget.MeasureGridView
        android:id="@+id/gv_img_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:numColumns="4"
        android:verticalSpacing="20dp"/>

    <View style="@style/HorizontalLineStyle"
        android:layout_marginTop="20dp"/>
</LinearLayout>