<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include layout="@layout/activity_title" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="30dp"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/modify_phone"
                android:textColor="@color/fontColor"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.rainwood.tools.view.ClearEditText
                    android:id="@+id/et_phone"
                    style="@style/EditTextStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:hint="@string/modify_tips_phone"
                    android:inputType="phone"
                    android:singleLine="true"
                    android:textColor="@color/textColor"
                    android:textColorHint="@color/gray_white"
                    app:regexType="mobile" />

                <com.rainwood.tools.view.CountdownView
                    style="@style/CountdownViewStyle"
                    android:layout_gravity="center_vertical" />
            </LinearLayout>

            <View
                style="@style/HorizontalLineStyle"
                android:layout_marginTop="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/modify_verify"
                android:textColor="@color/fontColor"
                android:textSize="14sp" />

            <com.rainwood.tools.view.ClearEditText
                android:id="@+id/et_verify"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/modify_tips_phone"
                android:inputType="number"
                android:singleLine="true"
                android:textColor="@color/textColor"
                android:textColorHint="@color/gray_white"
                app:regexType="count" />

            <View
                style="@style/HorizontalLineStyle"
                android:layout_marginTop="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/modify_new_pwd"
                android:textColor="@color/fontColor"
                android:textSize="14sp" />

            <com.rainwood.tools.view.PasswordEditText
                android:id="@+id/et_new_pwd"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/modify_tips_pwd"
                android:singleLine="true"
                android:textColor="@color/textColor"
                android:textColorHint="@color/gray_white"
                app:regexType="nonnull" />

            <View
                style="@style/HorizontalLineStyle"
                android:layout_marginTop="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/modify_new_pwd"
                android:textColor="@color/fontColor"
                android:textSize="14sp" />

            <com.rainwood.tools.view.PasswordEditText
                android:id="@+id/et_new_pwd_again"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/modify_tips_pwd_again"
                android:singleLine="true"
                android:textColor="@color/textColor"
                android:textColorHint="@color/gray_white"
                app:regexType="nonnull" />

            <View
                style="@style/HorizontalLineStyle"
                android:layout_marginTop="20dp" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


    <Button
        android:id="@+id/btn_confirm"
        style="@style/RedButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="30dp"
        android:text="@string/common_confirm" />

</LinearLayout>